--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
- 
+
+body{
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+
+    font-style: normal;
+  }
